# SonicTheHedgehogRecomp

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  ISSUES.md  README.md  RELEASE.md  STATUS.md  _build_native.bat  _smoke.bat  blacklist.txt  debug.ini  framelog_step2.txt
release/: README.txt
runner/: audio.c  audio.h  cmd_server.c  cmd_server.h  crash_report.c  crash_report.h  frame_record.h  frame_snapshots.c  game_extras.h  game_layout.h  game_spec.h  glue.c  glue.h  hybrid.c  hybrid.h  hybrid_global.c  hybrid_jmp.c  hybrid_table.c  input_script.c  input_script.h  main.c  oracle_trace.c  oracle_trace.h  png_write.h  reverse_debug.c  reverse_debug.h  sonic1_hybrid_table.c  sonic1_spec.c  sonic2_hybrid_table.c  sonic_extras.c  sonic_extras.h  stub_clown68000.c  verify.h
runner/audio/: event_queue.c  event_queue.h  mixer.c  mixer.h  observability.c  observability.h  psg.c  psg.h  sn76489.c  sn76489.h  ym2612.c  ym2612.h
scripts/: link-engine.bat  link-engine.sh  release-mac.sh
tests/: _audio_l3_sweep.py  run_tests.py  test_structural.py
tools/: analyze_fm_divergence.py  analyze_frames.py  analyze_trace.py  audit_all_splits.py  audit_functions.py  audit_smps.py  audit_sound_splits.py  audit_splits.py  boop_window_dump.py  build-linux.sh  build-macos.sh  clean_gamecfg.py  compare_flowers.py  compare_fm_trace.py  compare_fm_traces.py  compare_mem_write_log.py  compare_plc.py  compare_runs.py  compare_vram.py  compare_wav.py  converge_all.py  converge_misses.py  cycle_per_wall.py  dbg.py  demo_catch.py  demo_watch.py  diff_coverage.py  diff_fm_stream.py  diff_tiles.py  dump_sound_state.py  dump_transpose.py  extract_symbols.py  extract_voice_writes.py  find_jumps.py  fm_around_ring.py  fm_capture.py  fm_cycle_phase_diff.py  fm_cycle_ratio.py  fm_seq_diff.py  gen_stubs.py  (+33 more)
